--- a/index.html
+++ b/index.html
@@ -14,30 +14,31 @@
 
 <body>
 
-    <header id="header" class="header">
+    <div class="content">
+        <header id="header" class="header">
 
 
 
-        <img class="nav-logo" src="img/logo.jpg" alt="our logo logo">
+            <img class="nav-logo" src="img/logo.jpg" alt="our logo logo">
 
 
-        <a class=" facebook icon" href="#" target="_blank" rel="noopener noreferrer" title="Facebook">
-            <span class=" screen-reader-text">Facebook</span>
-        </a>
+            <a class=" facebook icon" href="#" target="_blank" rel="noopener noreferrer" title="Facebook">
+                <span class=" screen-reader-text">Facebook</span>
+            </a>
 
 
 
-    </header>
+        </header>
 
-    <section class="hero">
-        <img src="img/body.jpg" alt="body bg" class="hero-bg">
-        <a href="#" class="btn btn-primary hero-cta">sign up to coming events</a>
-    </section>
-    <section class="how-it-works">
-        <img src="img/How-does-it-work.png" alt="How-does-it-work">
-    </section>
+        <section class="hero">
+            <img src="img/body.jpg" alt="body bg" class="hero-bg">
+            <a href="#" class="btn btn-primary hero-cta">sign up to coming events</a>
+        </section>
+        <section class="how-it-works">
+            <img src="img/How-does-it-work.png" alt="How-does-it-work">
+        </section>
 
-
+    </div>
     <footer id="footer" class="footer copyright-area">
 
         <div class="footer-content">
